<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_changes"
        android:icon="@drawable/ic_check"
        android:title="@string/save"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/fast_picking"
        android:icon="@drawable/ic_manage"
        android:title="@string/fast_picking"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/app_info"
        android:icon="@drawable/ic_info"
        android:title="@string/app_info"
        app:showAsAction="ifRoom"/>

</menu>