<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.DetailsAppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/original_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/launcher_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/original_icon"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/suggestedIcons_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/header_suggested_icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E5E5E5"
                android:padding="8dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/suggested_icons"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:visibility="gone"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/suggestedIcons_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/header_iconpacks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E5E5E5"
                android:padding="8dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/icons_packs"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/iconsPacks_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E5E5E5"
            android:padding="8dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/app_details"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <com.dvd.android.googlelaunchersicons.utils.RowItem
            android:id="@+id/label_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_label"
            app:text="@string/label"/>

        <com.dvd.android.googlelaunchersicons.utils.RowItem
            android:id="@+id/pkg_name_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_package"
            app:text="@string/package_name"/>

        <com.dvd.android.googlelaunchersicons.utils.RowItem
            android:id="@+id/version_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_flag"
            app:text="@string/version"/>

        <com.dvd.android.googlelaunchersicons.utils.RowItem
            android:id="@+id/last_updated_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_history"
            app:text="@string/last_updated"/>

        <com.dvd.android.googlelaunchersicons.utils.RowItem
            android:id="@+id/components_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_launch"
            app:text="@string/components_names"/>

    </LinearLayout>

</ScrollView>